transition fixes, hide scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,10 @@ html, body {
   height: 100%;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Ubuntu';
   font-size: 0.875rem;
@@ -562,6 +566,8 @@ img {
   border-radius: 6px;
   font-size: 0.8125rem;
   text-transform: uppercase;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .button--bg-red {
@@ -570,8 +576,6 @@ img {
 
 .button--bg-red:hover {
   background-color: #c13c18;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
 }
 
 .button--bg-black {
@@ -580,8 +584,6 @@ img {
 
 .button--bg-black:hover {
   background-color: #1f2122;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
 }
 
 .button--reset {
@@ -678,11 +680,13 @@ img {
 .scroll-down {
   width: 1.8125rem;
   height: 0.875rem;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 .scroll-down:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
+  -webkit-transform: scale(2);
+          transform: scale(2);
 }
 
 .scroll-down__img {
@@ -1465,6 +1469,8 @@ img {
   height: 1.25rem;
   display: block;
   fill: #595959;
+  -webkit-transition: .3s;
+  transition: .3s;
 }
 
 .socials__logo:hover {
@@ -1501,6 +1507,11 @@ img {
   height: 0.375rem;
   background-color: #fff;
   border-radius: 50%;
+}
+
+.fixed-menu__link {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .fixed-menu__item:hover .fixed-menu__link {
