--- a/scss/blocks/_fixed-menu.scss
+++ b/scss/blocks/_fixed-menu.scss
@@ -27,10 +27,15 @@
     }
   }
 
+  &__link {
+    transition: 0.3s;
+  }
+
   &__item:hover  &__link {
     border: rem(1) solid rgba(255, 255, 255, 1);
     transform: scale(1);
     transition: 0.5s;
+    
   }
 
   &__item--active &__link {
