--- a/scss/blocks/_scroll-down.scss
+++ b/scss/blocks/_scroll-down.scss
@@ -1,9 +1,11 @@
 .scroll-down {
   width: rem(29);
   height: rem(14);
+  transition: .2s;
   
   &:hover {
-    transform:  scale(1.3);
+    transform: scale(2);
+ 
   }
 
   &__img {
