--- a/scss/settings/_base.scss
+++ b/scss/settings/_base.scss
@@ -2,6 +2,10 @@ html, body {
   height: 100%;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   font-family: 'Ubuntu';
   font-size: rem(14);
